--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     align-items: center;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-   
+    background-color:black;
 }
 #calculator{
     background: black;
@@ -19,7 +19,7 @@ body{
     position: relative;
     width: 400px;
     max-height: 650px;
-    margin-top: 40px;
+   
 } 
 #display{
     width: 100%;
